--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": ["MIT"],
   "version": "1.0.0",
   "require": {
-    "algolia/algoliasearch-magento-2": "~1.5.0"
+    "algolia/algoliasearch-magento-2": "@dev"
   },
   "autoload": {
     "files": [ "registration.php" ],
